package ParkingLotProblem.vehicle;

import java.util.Objects;

public class Car implements Vehicle{

    private String licensePlate;

    public Car(String licensePlate) {
        this.licensePlate = licensePlate;
    }

    @Override
    public String getLicensePlate() {
        return licensePlate;
    }

    @Override
    public VehicleSize getSize() {
        return VehicleSize.MEDIUM;
    }

    @Override
    public boolean equals(Object o){
        if(this == o){
            return true;
        }
        if(o == null || getClass() != o.getClass()){
            return false;
        }
        Car car = (Car)o;
        return Objects.equals(licensePlate,car.licensePlate);
    }

    @Override
    public int hashCode(){
        return Objects.hash(licensePlate);
    }
}
